<resources>
    <string name="app_name">Walkys</string>
    <string name="password">Password</string>
    <string name="google_key">AIzaSyBT20hQ7W44fZzKO0TwKppeqVZwUzaPBfI</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="log_in">Log in</string>
    <string name="walkys">Walkys!</string>
    <string name="welcomed_to">Welcomed to</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">"Don\'t have an account? "</string>
    <string name="hi">Hi</string>
    <string name="to_continue_to_fill_details">To continue to fill details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">"Already have an account? "</string>
    <string name="horly_rate">Enter your hourly rate</string>
    <string name="accept_terms_amp_condition"><![CDATA[Accept terms & condition]]></string>
    <string name="enter_your_bank">Enter your bank</string>
    <string name="enter_your_account">Enter your account</string>
    <string name="near_you">Near you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_booking">My Booking</string>
    <string name="my_profile">My Profile</string>
    <string name="my_commission">My Commission</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>
    <string name="completed">Completed</string>
    <string name="current">Current</string>
    <string name="dog_name">Dog Name</string>
    <string name="dog_breed">Dog breed</string>
    <string name="hour_s_request">Hour\'s request</string>
    <string name="accept">Accept</string>
    <string name="reject">reject</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile">Mobile</string>
    <string name="bank">Bank</string>
    <string name="address">Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="walky">Walky</string>
    <string name="rank">Rank</string>
    <string name="level">Level</string>
    <string name="userDetail">User Detail</string>
    <string name="user">User</string>
    <string name="tag_pet">Tag Pet</string>
    <string name="tag_people">Tag People</string>
    <string name="successful">Successful!</string>
    <string name="breed">Breed</string>
    <string name="distance">Distance</string>
    <string name="rating">Rating</string>
    <string name="cafes">Cafes</string>
    <string name="parks">Parks</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="lorem_ipsum_dolor_sit_amet_consetetur_sadipsc_ing_elitr_sed_diam_nonumy">Lorem ipsum dolor si ing elitr, sed diam umyLorem ipsum dolor sit amet, consetetur sadipsc ing elitr, sed diam nonumyLorem ipsum dolor sit amet, consetetur sadipsc ing elitr, sed diam nonumyLorem ipsum dolor sit amet, consetetur sadipsc ing elitr, sed diam nonumy</string>
    <string name="pet_pass">Pet Pass</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="pets">Pets</string>
    <string name="following">Following</string>
    <string name="popular">Popular</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="adventure">Adventure</string>
    <string name="images">Images</string>
    <string name="post_image_video"><![CDATA[Post Image & Video]]></string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="follow_more_people_to_discover_new_post">Follow more people to discover new post</string>
    <string name="you_haven_t_followed_anyone">You haven\'t Followed anyone</string>
    <string name="followers">Followers</string>
    <string name="follow">Follow</string>
    <string name="say_something">Say Something</string>
    <string name="tag_location">Tag Location</string>
    <string name="following_list">Following List</string>
    <string name="follower_and_following"><![CDATA[Follower & Following]]></string>
    <string name="create_group">Create Group</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current password</string>

    <string-array name="dogColors">
        <item>Dog Colors</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
    <string-array name="dogBreads">
        <item>Dog Breads</item>
        <item>Dog 1</item>
        <item>Dog 2</item>
    </string-array>


</resources>