<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.walky.walkyUser.fragments.PetLeaderBoardFragment">


    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_50"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingVertical="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/smallTextView"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:layout_marginEnd="@dimen/_5sdp"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/dog_name"
                android:textColor="@color/textColorPrimary"
                android:layout_marginRight="@dimen/_5sdp" />

            <TextView
                style="@style/smallTextView"
                android:layout_width="0dp"
                android:layout_weight="1.3"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/breed"
                android:textColor="@color/textColorPrimary" />


            <TextView
                style="@style/smallTextView"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/distance"
                android:textColor="@color/textColorPrimary" />
            <TextView
                style="@style/smallTextView"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/rating"
                android:textColor="@color/textColorPrimary" />

        </LinearLayout>

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:shimmer_demo_layout="@layout/pet_leaderboard_item"
            tools:itemCount="3"
            tools:listitem="@layout/pet_leaderboard_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>