<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.walky.walkyUser.fragments.LeaderBoardFragment">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:background="@color/green_50"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/mediumTextView"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/rank"
                android:textColor="@color/textColorPrimary" />
            <TextView
                style="@style/mediumTextView"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:fontFamily="@font/gilroy_bold"
                android:gravity="start"
                android:text="@string/name"
                android:textColor="@color/textColorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    style="@style/mediumTextView"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:text="@string/level"
                    android:textColor="@color/textColorPrimary" />
                <ImageView
                    app:tint="@color/black"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/filter"/>
            </LinearLayout>


        </LinearLayout>

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:shimmer_demo_layout="@layout/leaderboard_item"
            tools:itemCount="3"
            tools:listitem="@layout/leaderboard_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>