<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.walky.walkys.ui.login.AuthViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTv"
            style="@style/titleTextView"
            android:layout_height="?actionBarSize"
            android:background="@color/white"

            android:gravity="center"
            android:text="@string/log_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".LoginActivity">

                <ImageView
                    android:id="@+id/logoIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/wlcTv"
                    style="@style/titleTextView"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/welcomed_to"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/logoIv" />

                <TextView
                    android:id="@+id/appNameTv"
                    style="@style/titleTextView"
                    android:text="@string/walkys"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wlcTv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/emailCons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/edit_text_back"
                    app:layout_constraintTop_toBottomOf="@id/appNameTv">

                    <ImageView
                        android:id="@+id/emailIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/email"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/emailEt"
                        style="@style/mediumEditView"
                        android:layout_width="0dp"
                        android:background="@null"
                        android:hint="@string/email_address"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@={viewModel.email}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/emailIv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/passwordCons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/edit_text_back"
                    app:layout_constraintTop_toBottomOf="@id/emailCons">

                    <ImageView
                        android:id="@+id/passwordIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/lock"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/passwordEt"
                        style="@style/mediumEditView"
                        android:layout_width="0dp"
                        android:background="@null"
                        android:text="@={viewModel.password}"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/passwordIv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:onClick="@{viewModel::onLoginButtonClick}"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/sign_in"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordCons" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/textColorSecondary" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:text="OR"
                        android:textSize="15sp" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="@color/textColorSecondary"

                        />

                </LinearLayout>

                <Button
                    android:id="@+id/loginFacbook"
                    style="@style/FacbookButton"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/dark_blue"
                    android:drawableLeft="@drawable/facebook"
                    android:text="SIGN IN WITH FACEBOOK"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

                <Button
                    android:id="@+id/loginTwitter"
                    style="@style/FacbookButton"
                    android:layout_marginTop="14dp"
                    android:backgroundTint="@color/light_blue_300"
                    android:drawableLeft="@drawable/twitter"
                    android:text="SIGN IN WITH TWITTER"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginFacbook" />

                <TextView
                    android:id="@+id/forgotTv"
                    style="@style/mediumTextView"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/gilroy_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginTwitter" />

                <TextView
                    android:id="@+id/signUpTv"
                    style="@style/mediumTextView"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgotTv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>


</layout>

