<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.SignUpActivity2">

    <data></data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backIv"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginTv"
                style="@style/titleTextView"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/backIv"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".LoginActivity">

                <TextView
                    android:id="@+id/hiTv"
                    style="@style/titleTextView"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/hi"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appNameTv"
                    style="@style/mediumTextView"
                    android:layout_width="0dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/to_continue_to_fill_details"
                    android:textColor="@color/textColorSecondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hiTv" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bankNameCons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/edit_text_back"
                    app:layout_constraintTop_toBottomOf="@id/appNameTv">

                    <ImageView
                        android:id="@+id/bankNameIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/bank"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/bankNameTv"
                        style="@style/mediumEditView"
                        android:layout_width="0dp"
                        android:background="@null"
                        android:hint="@string/enter_your_bank"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/bankNameIv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/bankAccountCons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/edit_text_back"
                    app:layout_constraintTop_toBottomOf="@id/bankNameCons">

                    <ImageView
                        android:id="@+id/bankAccountIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/bank_account"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/bankAccountTv"
                        style="@style/mediumEditView"
                        android:layout_width="0dp"
                        android:background="@null"
                        android:hint="@string/enter_your_account"
                        android:inputType="number"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/bankAccountIv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ifscCons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/edit_text_back"
                    app:layout_constraintTop_toBottomOf="@id/bankAccountCons">

                    <ImageView
                        android:id="@+id/ifscIv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_15sdp"
                        android:src="@drawable/phone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/ifscTv"
                        style="@style/mediumEditView"
                        android:layout_width="0dp"
                        android:background="@null"
                        android:hint="Enter IFSC"
                        android:inputType="text"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ifscIv"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/signUpBtn"
                    style="@style/button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ifscCons" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>


</layout>

